@@ -4,7 +4,6 @@ import com.cloudbees.train.receipt.dto.SeatAllocationDTO;
 import com.cloudbees.train.receipt.dto.SeatDTO;
 import com.cloudbees.train.receipt.exceptions.UserNotFoundException;
 import com.cloudbees.train.receipt.model.TrainReceipt;
-import jakarta.annotation.PostConstruct;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -12,7 +11,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class TrainReceiptService {
@@ -30,7 +28,7 @@ public class TrainReceiptService {
         return Optional.ofNullable(trainReceiptMap.get(id));
     }
 
-    private List<TrainReceipt> findAll(){
+    public List<TrainReceipt> findAll(){
         return new ArrayList<>(trainReceiptMap.values());
     }
 
@@ -38,15 +36,15 @@ public class TrainReceiptService {
         List<TrainReceipt> receipts = findAll();
         return receipts.stream().filter(receipt -> receipt.getSection().equals(section)).map(
                 receipt -> new SeatAllocationDTO(receipt.getPassenger(), receipt.getSeatNumber())
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     public void remove(Integer id){
         trainReceiptMap.remove(id);
     }
 
-    public void updateSeatNumber(Integer userId, SeatDTO seat) throws UserNotFoundException {
-        Optional<TrainReceipt> trainReceipt = findById(userId);
+    public void updateSeatNumber(Integer userReceiptId, SeatDTO seat) throws UserNotFoundException {
+        Optional<TrainReceipt> trainReceipt = findById(userReceiptId);
         if(trainReceipt.isEmpty()){
             throw new UserNotFoundException("Passenger does not exist");
         }
